--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.3",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "~1.9.0"
   }
 }
